<resources>
    <string name="loadingText">performing security verification&#8230;</string>
    <string name="root_verified">enabling all features&#8230;</string>
    <string name="root_unverified">only enabling non-root features&#8230;</string>
    <string name="initial_run">you\'re a new face, welcome to the party!</string>
    <string name="welcome_back">eyyyy welcome back</string>
    <string name="welcome_back_default_username">buddy</string>
    <string name="welcome_back_dialog_message">what shall I call you from now on?</string>
    <string name="welcome_back_dialog_title">make dashboard yours!</string>
    <string name="welcome_back_dialog_confirm">I like it!</string>
    <string name="username_welcome">welcome back</string>
    <string name="copied_system_info">System Information</string>
    <string name="copied_system_info_to_clipboard">Successfully copied system information to clipboard!</string>
    <string name="vendor_fingerprint">Security Patch Level:</string>
    <string name="double_click_back">Nooo! Don\'t leave me! I\'ll miss you!</string>
    <string name="change_name_dialog_message">I assume you want me to call you something else, master?</string>
    <string name="change_name_dialog_title">let\'s change it up!</string>
    <string name="change_name_dialog_confirm">Much better!</string>
    <string name="first_slide_title">welcome to dashboard.</string>
    <string name="first_slide_description">dashboard is a cm theme engine addon by chummy development team that allows you to expand the possibilities of all cdt themes, as well as extras for other themes as well.</string>
    <string name="second_slide_title">color picker</string>
    <string name="second_slide_description">dashboard comes with a built in color picker for hotswapping of colors!\nplease allow it to automatically download a small patch file for itself before you leave your internet connection.</string>
    <string name="third_slide_title">creative mode, activated!</string>
    <string name="third_slide_description">with creative mode, you could theoretically modify any theme with color, style and drawable tweaks. these themes need dashboard-specific values for complete support.</string>
    <string name="fourth_slide_title">contextual header swapping</string>
    <string name="fourth_slide_description">dashboard also comes with a built in contextual header swapper and importer to customize your phone further with dashboard certified packs or your own images!</string>
    <string name="fifth_slide_title">theme engine in need of diagnosing?</string>
    <string name="fifth_slide_description">dashboard also comes with built in theme utilities to offer you a plethora of options to help you fix your theme engine directly on your phone!\n\n</string>
    <string name="sixth_slide_title">this app needs root!</string>
    <string name="sixth_slide_description">to use all the functions of the app, your phone must definitely have root enabled, as well as a custom rom flashed if you would like to have a contextual header!</string>
    <string name="last_slide_title">are you ready?</string>
    <string name="last_slide_description">please read everything that pops up while you use this app. crucial information to prevent you from bootlooping such as soft rebooting after setting an action is key!</string>
    <string name="secret_feature_enabled">creative mode activated</string>
    <string name="secret_feature_disabled">creative mode deactivated</string>
    <string name="advanced_mode_enabled">sprinkling some extra features&#8230;</string>
    <string name="layout_fragment_colorpicker_select_tweaks">select tweaks:</string>
    <string name="layout_fragment_colorpicker_color_swap_restart_systemui">color swap + restart systemui</string>
    <string name="layout_fragment_colorpicker_color_swap_soft_reboot">color swap + soft reboot</string>
    <string name="layout_fragment_colorpicker_force_update_patched_resource">force update patched resource file</string>
    <string name="layout_fragment_colorpicker_installed_color_switchable_themes">installed color switchable themes:</string>
    <string name="zipfile_checker_success">file chosen: </string>
    <string name="zipfile_checker_error">File chosen was not a valid ZIP!</string>
    <string name="downloader_button">Online Header Packs Database</string>
    <string name="downloader_dialog_accept">Download</string>
    <string name="downloader_dialog_cancel">Cancel</string>
    <string name="downloader_dialog_one">downloading cloud database&#8230;</string>
    <string name="downloader_dialog_two">downloading header pack&#8230;</string>
    <string name="downloader_title">dashboard certified header packs</string>
    <string name="downloader_empty">you have downloaded all available header packs from this source!\n\nif you would like to clear your dashboard downloads folder, click the overflow menu and select \"delete header storage and restart\".</string>
    <string name="delete_dashboard_folder_restart">delete header storage and restart</string>
    <string-array name="contextual_headers">
        <item>all headers</item>
        <item>notifhead_afternoon.png</item>
        <item>notifhead_christmas.png</item>
        <item>notifhead_morning.png</item>
        <item>notifhead_newyearseve.png</item>
        <item>notifhead_night.png</item>
        <item>notifhead_noon.png</item>
        <item>notifhead_sunrise.png</item>
        <item>notifhead_sunset_hdpi.png</item>
        <item>notifhead_sunset_xhdpi.png</item>
        <item>notifhead_sunset.png</item>
    </string-array>
    <string name="contextualheaderimporter_description">@string/contextualheaderimporter</string>
    <string name="contextualheaderimporter_description_secondary">this is a highly experimental feature to allow you to set your own custom contextual headers for your systemui notification shade based on pre-made zip files shared by themers. a soft reboot is required for the system to take your changes as we are modifying the actual apk installed on your phone.\n\ndon\'t forget to enable contextual headers (non-poly/hd) in your rom\'s settings! if headers aren\'t set after a soft reboot, clear your systemui cache!\n</string>
    <string name="contextualheaderimporter_select_downloaded_zip">select header pack in \'/storage/emulated/0/dashboard./headers\':</string>
    <string name="contextualheaderimporter_information_header">information about the selected header pack</string>
    <string name="contextualheaderimporter_header_pack_name">pack name: </string>
    <string name="contextualheaderimporter_header_pack_author">pack author: </string>
    <string name="contextualheaderimporter_header_pack_team">team name: </string>
    <string name="contextualheaderimporter_header_pack_version">pack version: </string>
    <string name="contextualheaderimporter_header_pack_theme_count">themed headers: </string>
    <string name="contextualheaderimporter_header_pack_na">n/a</string>
    <string name="colorpicker_description">color switcher</string>
    <string name="colorpicker_description_secondary">this is a highly experimental feature to hotswap your accent colors at runtime (meaning that a full reboot isn\'t necessary and will not require creating and installing a new APK file)\n\nthis has no side effects except battery stats force closing, so to regain battery stats again just rebuild the theme. depending on the tweaks selected, you may need to clear out your recents after performing the color swap.\n</string>
</resources>