<?xml version="1.0" encoding="utf-8"?>
<com.pluscubed.insetsdispatcher.view.InsetsDispatcherFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/list_with_fab_bottom_margin"
        app:layout_windowInsets="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/content_inset_less"
            android:weightSum="1">

            <TextView
                android:id="@+id/landingMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_less"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/contextualheaderimporter_description"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/landingMessageSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/landingMessage"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="@dimen/content_inset_less"
                android:layout_weight="0.92"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/contextualheaderimporter_description_secondary"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/content_text_size" />

            <Button
                android:id="@+id/downloadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/landingMessageSecondary"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="?attr/card_background"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/downloader_button" />

            <TextView
                android:id="@+id/themeInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/downloadButton"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/contextualheaderimporter_information_header"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/themeNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeInformation"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/contextualheaderimporter_header_pack_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/themeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeInformation"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/themeNameTitle"
                android:text="@string/contextualheaderimporter_header_pack_na"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/themeAuthorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeNameTitle"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/contextualheaderimporter_header_pack_author"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/themeAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeName"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/themeAuthorTitle"
                android:text="@string/contextualheaderimporter_header_pack_na"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/themeDevTeamTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeAuthorTitle"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/contextualheaderimporter_header_pack_team"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/themeDevTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeAuthorTitle"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/themeDevTeamTitle"
                android:text="@string/contextualheaderimporter_header_pack_na"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/themeVersionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeDevTeamTitle"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/contextualheaderimporter_header_pack_version"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/themeVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeDevTeam"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/themeVersionTitle"
                android:text="@string/contextualheaderimporter_header_pack_na"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/themeCountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeVersionTitle"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/contextualheaderimporter_header_pack_theme_count"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/themeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeVersionTitle"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/themeCountTitle"
                android:text="@string/contextualheaderimporter_header_pack_na"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/themeCountTitle"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/contextualheaderimporter_select_downloaded_zip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/zipSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/content_inset"
                android:visibility="visible" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/zipSpinner"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/selectyourdeviceconfiguration"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_weight="1"
                    android:text="@string/xhdpi" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_weight="1"
                    android:text="@string/xxhdpi" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_weight="1"
                    android:text="@string/xxxhdpi" />
            </RadioGroup>
        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/apply_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|right"
            android:layout_marginBottom="@dimen/content_inset"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_done_24dp"
            android:visibility="visible"
            app:layout_windowInsets="bottom"
            app:layout_windowInsetsUseMargin="true" />

    </android.support.design.widget.CoordinatorLayout>


</com.pluscubed.insetsdispatcher.view.InsetsDispatcherFrameLayout>
