<?xml version="1.0" encoding="utf-8"?>
<com.pluscubed.insetsdispatcher.view.InsetsDispatcherFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/list_with_fab_bottom_margin"
        app:layout_windowInsets="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/content_inset_less"
            android:weightSum="1">

            <TextView
                android:id="@+id/landingMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_less"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/colorpicker_description"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/landingMessageSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="@dimen/content_inset_less"
                android:layout_weight="0.92"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/colorpicker_description_secondary"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/content_text_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="@dimen/content_inset"
                android:text="@string/layout_fragment_colorpicker_installed_color_switchable_themes"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:elegantTextHeight="false"
                                android:fontFamily="sans-serif-thin"
                                android:paddingLeft="30dp"
                                android:paddingRight="20dp"
                                android:paddingTop="20dp"
                                android:text="Accent"
                                android:textColor="#ffffff"
                                android:textSize="24dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/accentcolor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:elegantTextHeight="false"
                                    android:fontFamily="sans-serif-thin"
                                    android:gravity="center_horizontal"
                                    android:text="#ff0000"
                                    android:textColor="#ffffff"
                                    android:textSize="17dp" />

                            </LinearLayout>
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/preview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center|end"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:src="@drawable/colorshow" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/changeTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|right"
            android:layout_marginBottom="@dimen/content_inset"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_invert_colors_24dp"
            android:visibility="visible"
            app:layout_windowInsets="bottom"
            app:layout_windowInsetsUseMargin="true" />

    </android.support.design.widget.CoordinatorLayout>

</com.pluscubed.insetsdispatcher.view.InsetsDispatcherFrameLayout>
